# isabelle-core

./: .gitignore  Cargo.toml  Jenkinsfile  Makefile  README.md  mongo.sh  run.sh
.zed/: tasks.json
specs/openapi/: openapi.yaml
src/: args.rs  lib.rs  main.rs  plugin_actor_demo.rs
src/handler/: mod.rs  route.rs  route_call.rs  route_call_actor.rs  web_response.rs
src/notif/: email.rs  gcal.rs
src/server/: itm.rs  itm.rs.orig  itm.rs.rej  login.rs  mod.rs  secret.rs  setting.rs  system.rs  user_control.rs
src/state/: core_task.rs  data.rs  mod.rs  route_cache.rs  secrets.rs  state.rs  store.rs  store_local.rs  store_mongo.rs
src/util/: bson_wrapper.rs  mod.rs
templates/: Cargo.toml.tmpl  main.rs.tmpl
tools/: gen_shell.py
tools/build-env/: Dockerfile_ubuntu_2404
tools/lib/: version.sh
