[package]
name = "isabelle-core"
version = "1.22.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10"
actix-cors = "0.6.4"
actix-files = "0.6.6"
actix-identity = "0.6.0"
actix-multipart = "0.6.1"
actix-rt = "2.10.0"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = { version = "4", features = ["cookies", "rustls-0_23"] }
argon2 = "0.5.2"
async-trait = "0.1.74"
bson = { version = "2.9.0", features = ["serde_with"] }
chrono = "0.4.26"
clap = { version = "4.5.23", features = ["derive"] }
cron = "0.12.1"
env_logger = "0.8.4"
futures-util = "0.3.29"
isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm", tag = "1.10.0" }
isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api", tag = "1.23.0" }

# Statically-linked plugins. Each is gated by a feature so different deploy
# targets produce different binaries. See [features] below.
isabelle-plugin-security = { path = "../isabelle-plugin-security", optional = true }
isabelle-plugin-midair = { path = "../../midair-platform/isabelle-plugin-midair", optional = true }

lazy_static = "1.4.0"
lettre = { version = "0.11.11", features = [
	"rustls-tls",
	"smtp-transport",
	"pool",
	"hostname",
	"builder",
], default-features = false }
log = "0.4.0"
mongodb = { version = "3.1.1" }
now = "0.1.3"
parking_lot = "0.12.1"
rand = "0.8.5"
sanitize-filename = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.12.0"
threadpool = "1.8.1"
tokio = { version = "1.37.0" }
uuid = "1.10.0"

[dev-dependencies]
tempfile = "3"

[features]
full_file_database = []

# Plugin feature flags — each enables an optional dep above. Convenience
# profiles bundle the plugins needed by a specific deployment.
plugin-security = ["dep:isabelle-plugin-security"]

# Phase 3: register security via the actor-mode entry point instead of the
# trait-mode one. Currently incomplete — most security hooks are stubs in
# actor mode (see isabelle-plugin-security/src/lib.rs TODOs). Don't enable
# this in production until the migration is finished.
plugin-security-actor = ["dep:isabelle-plugin-security"]

# midair is actor-only since the BridgeApi removal — all hooks were
# rewritten to native async with CoreHandle, so there is no trait-mode
# entry point anymore. `plugin-midair` is an alias that defaults security
# to trait mode; `plugin-midair-actor` routes security through actor too.
# Both end up calling the same `register_actor` for midair itself.
plugin-midair-actor = ["dep:isabelle-plugin-midair", "plugin-security-actor"]
plugin-midair = ["dep:isabelle-plugin-midair", "plugin-security"]

# Convenience profiles. `midair` keeps security in trait mode; `midair-actor`
# uses the actor entry point for security too.
midair = ["plugin-midair"]
midair-actor = ["plugin-midair-actor"]

# Phase-3 actor-mode pilot demo plugin. Off by default; enable to register
# a noop observer plugin via the actor path (logs each hook event it
# receives). Useful for verifying the dispatcher pipeline end-to-end.
actor-demo = []

[profile.release]
lto = "thin"
codegen-units = 16
opt-level = "s"
incremental = true

[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256
overflow-checks = false

[profile.dev.package."*"]
codegen-units = 256

# Use the local checkout of isabelle-plugin-api so the actor-model refactor
# can iterate without round-tripping through a new git tag. Affects all
# transitive consumers too (the plugins also pick up the local version).
[patch."https://github.com/isabelle-platform/isabelle-plugin-api"]
isabelle-plugin-api = { path = "../isabelle-plugin-api" }
